--- a/tools/profiles/release.json
+++ b/tools/profiles/release.json
@@ -49,7 +49,7 @@
             "--no_wrap_diagnostics", "-e",
             "--diag_suppress=Pa050,Pa084,Pa093,Pa082", "-Ohz", "-DNDEBUG", "--enable_restrict", "-D_RTE_"],
         "asm": [],
-        "c": ["--vla"],
+        "c": ["--vla", "--diag_suppress=Pe546"],
         "cxx": ["--guard_calls", "--no_static_destruction"],
         "ld": ["--skip_dynamic_initialization", "--threaded_lib"]
     }
