--- a/.astyleignore
+++ b/.astyleignore
@@ -9,6 +9,10 @@ features/filesystem/fat/ChaN
 features/frameworks
 features/FEATURE_BLE/targets
 features/unsupported/
+features/FEATURE_COMMON_PAL/
+hal/storage_abstraction
+FEATURE_NANOSTACK/coap-service
+FEATURE_NANOSTACK/sal-stack-nanostack
 rtos/TARGET_CORTEX/rtx5
 targets
 tools
