--- a/.astyleignore
+++ b/.astyleignore
@@ -2,17 +2,13 @@ BUILD
 cmsis
 features/cryptocell
 features/mbedtls
-features/FEATURE_LWIP/lwip
+features/lwipstack/lwip
 rtos/TARGET_CORTEX/rtx4
 features/filesystem/littlefs/littlefs
 features/filesystem/fat/ChaN
 features/frameworks
 features/FEATURE_BLE/targets
-features/FEATURE_LWIP/lwip-interface/lwip
 features/unsupported/
-features/FEATURE_COMMON_PAL/
-FEATURE_NANOSTACK/coap-service
-FEATURE_NANOSTACK/sal-stack-nanostack
 rtos/TARGET_CORTEX/rtx5
 targets
 tools
