--- a/.travis.yml
+++ b/.travis.yml
@@ -268,3 +268,17 @@ matrix:
       script:
         - echo 'Checking that there is no GPL licence text in code'
         - ! git grep -q --ignore-case "gnu general public";
+
+    - env:
+        - NAME=unittests
+      install:
+        # Install dependencies
+        - sudo apt-get -y install build-essential cmake
+        - pip install 'gcovr>=4.1'
+        # Print versions we use
+        - g++ --version
+        - cmake --version
+        - python --version
+        - gcovr --version
+      script:
+        - ./UNITTESTS/mbed_unittest.py
