--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ IntelHex>=1.3
 junit-xml
 pyYAML
 requests
-mbed-ls>=0.2.13
+mbed-ls>=0.2.13,<2.0
 mbed-host-tests>=1.1.2
 mbed-greentea>=0.2.24
 beautifulsoup4>=4
