--- a/requirements.txt
+++ b/requirements.txt
@@ -16,4 +16,5 @@ jsonschema>=2.6
 future>=0.16.0
 six>=1.11.0
 git+https://github.com/armmbed/manifest-tool.git@v1.4.5
+urllib3[secure]
 mbed-cloud-sdk==2.0.0
