--- a/features/mbedtls/importer/Makefile
+++ b/features/mbedtls/importer/Makefile
@@ -27,7 +27,7 @@
 #
 
 # Set the mbed TLS release to import (this can/should be edited before import)
-MBED_TLS_RELEASE ?= mbedtls-2.10.0
+MBED_TLS_RELEASE ?= development-restricted
 
 # Translate between mbed TLS namespace and mbed namespace
 TARGET_PREFIX:=../
